--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
+    "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
     "google-spreadsheet": "^3.1.15",
-    "mongoose": "^5.12.14",
+    "mongoose": "^5.13.3"
   }
 }
